@@ -59,6 +59,7 @@ private:
 	vector<G4ThreeVector> mvert;    ///< Primary Vertex of the track's mother
 	vector<string> materialName;    ///< Material name
 	vector<int>       processID;    ///< Process that originated this step
+    vector<double>         mgnf;    ///< magnetic field
 
 	vector<detector>  Detectors;    ///< Detectors Hit. It might be a vector if multiple detectors have the same identifier
 
@@ -93,8 +94,11 @@ public:
 	inline void SetDx(double Dx)                { dx.push_back(Dx); }
 	inline vector<double> GetDx()               { return dx; }
 
-	inline void SetTime(double ctime)           { time.push_back(ctime); }
-	inline vector<double> GetTime()             { return  time; }
+	inline void SetMgnf(double m)               { mgnf.push_back(m); }
+	inline vector<double> GetMgnf()             { return  mgnf; }
+
+    inline void SetTime(double ctime)           { time.push_back(ctime); }
+    inline vector<double> GetTime()             { return  time; }
 
 	inline void SetMom(G4ThreeVector pxyz)      { mom.push_back(pxyz); }
 	inline G4ThreeVector GetMom()               { return mom[0]; }
